--- a/Bio Data/bio.css
+++ b/Bio Data/bio.css
@@ -1,13 +1,12 @@
-.a{
 
-}
 
 form{
       margin-left: 500px;
 
 }
 
-form input[type=text]{
+form input[type=text]
+{
         width: 20%;
 
 }
@@ -16,5 +15,7 @@ form select{
         width: 20%;
 }
 form input[type=submit]{
-        width: 40%;
+        width: 10%;
+        margin-left: 100px;
+
 }
