--- a/Bio Data/bio.css
+++ b/Bio Data/bio.css
@@ -1,6 +1,7 @@
 
 
-form{
+form
+{
       margin-left: 500px;
 
 }
@@ -11,10 +12,12 @@ form input[type=text]
 
 }
 
-form select{
+form select
+{
         width: 20%;
 }
-form input[type=submit]{
+form input[type=submit]
+{
         width: 10%;
         margin-left: 100px;
 
